--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -26,8 +26,7 @@
         "target": "ES2020",
         "resolveJsonModule": true,
         "skipLibCheck": true,
-        "sourceMap": false,
-        "strictNullChecks": true
+        "sourceMap": false
     },
     "exclude": ["../node_modules", "../config.json"],
     "include": ["../src/**/*"],
