--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -28,6 +28,6 @@
         "skipLibCheck": true,
         "sourceMap": false
     },
-    "exclude": ["../node_modules", "../config.json"],
+    "exclude": ["../node_modules"],
     "include": ["../src/**/*"],
 }
