--- a/example.env
+++ b/example.env
@@ -1,5 +1,3 @@
-ACTIVITY_NAME=
-ACTIVITY_TYPE=
 BOT_CHANNEL_IDS=
 CATEGORY_IDS=
 CHECK_CHANNEL_ID=
@@ -7,4 +5,7 @@ INTERVAL=
 LOG_CHANNEL_ID=
 PREFIX=
 SERVER_ID=
+STATUS_1=
+STATUS_2=
+STATUS_3=
 TOKEN=
