--- a/example.env
+++ b/example.env
@@ -1,10 +1,11 @@
-ACTIVITY_NAME=
-ACTIVITY_TYPE=
 BOT_CHANNEL_IDS=
 CATEGORY_IDS=
 CHECK_CHANNEL_ID=
+DEBUG=
+IGNORE_IDS=
 INTERVAL=
 LOG_CHANNEL_ID=
 PREFIX=
 SERVER_IDS=
+STATUS=
 TOKEN=
